// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filters work https://catalog.northeastern.edu/undergraduate/arts-media-design/architecture/architectural-design-minor#programrequirementstext 1`] = `
Object {
  "type": "Minor",
  "url": "https://catalog.northeastern.edu/undergraduate/arts-media-design/architecture/architectural-design-minor#programrequirementstext",
}
`;

exports[`Filters work https://catalog.northeastern.edu/undergraduate/arts-media-design/communication-studies/media-screen-studies-history-ba#programrequirementstext 1`] = `
Object {
  "type": "Major",
  "url": "https://catalog.northeastern.edu/undergraduate/arts-media-design/communication-studies/media-screen-studies-history-ba#programrequirementstext",
}
`;

exports[`Filters work https://catalog.northeastern.edu/undergraduate/business/business-administration-bsba#programrequirementstext 1`] = `
Object {
  "type": "Major",
  "url": "https://catalog.northeastern.edu/undergraduate/business/business-administration-bsba#programrequirementstext",
}
`;

exports[`Filters work https://catalog.northeastern.edu/undergraduate/business/concentrations/fintech#programrequirementstext 1`] = `
Object {
  "type": "Concentration",
  "url": "https://catalog.northeastern.edu/undergraduate/business/concentrations/fintech#programrequirementstext",
}
`;

exports[`Filters work https://catalog.northeastern.edu/undergraduate/business/interdisciplinary-minors/accounting-advisory-services-minor#programrequirementstext 1`] = `
Object {
  "type": "Minor",
  "url": "https://catalog.northeastern.edu/undergraduate/business/interdisciplinary-minors/accounting-advisory-services-minor#programrequirementstext",
}
`;

exports[`Filters work https://catalog.northeastern.edu/undergraduate/computer-information-science/accelerated-bachelor-graduate-degree-programs#programrequirementstext 1`] = `
Object {
  "type": "Unknown",
  "url": "https://catalog.northeastern.edu/undergraduate/computer-information-science/accelerated-bachelor-graduate-degree-programs#programrequirementstext",
}
`;

exports[`Filters work https://catalog.northeastern.edu/undergraduate/computer-information-science/computer-information-science-combined-majors/computer-science-concentration-music-composition-technology-bs#programrequirementstext 1`] = `
Object {
  "type": "Major",
  "url": "https://catalog.northeastern.edu/undergraduate/computer-information-science/computer-information-science-combined-majors/computer-science-concentration-music-composition-technology-bs#programrequirementstext",
}
`;

exports[`Filters work https://catalog.northeastern.edu/undergraduate/computer-information-science/computer-information-science-combined-majors/computer-science-game-development-bs#programrequirementstext 1`] = `
Object {
  "type": "Major",
  "url": "https://catalog.northeastern.edu/undergraduate/computer-information-science/computer-information-science-combined-majors/computer-science-game-development-bs#programrequirementstext",
}
`;

exports[`Filters work https://catalog.northeastern.edu/undergraduate/computer-information-science/computer-information-science-combined-majors/computer-science-history-bs#programrequirementstext 1`] = `
Object {
  "type": "Major",
  "url": "https://catalog.northeastern.edu/undergraduate/computer-information-science/computer-information-science-combined-majors/computer-science-history-bs#programrequirementstext",
}
`;

exports[`Filters work https://catalog.northeastern.edu/undergraduate/computer-information-science/computer-science/bscs#programrequirementstext 1`] = `
Object {
  "type": "Major",
  "url": "https://catalog.northeastern.edu/undergraduate/computer-information-science/computer-science/bscs#programrequirementstext",
}
`;

exports[`Filters work https://catalog.northeastern.edu/undergraduate/engineering/chemical/chemical-engineering-bsche#programrequirementstext 1`] = `
Object {
  "type": "Major",
  "url": "https://catalog.northeastern.edu/undergraduate/engineering/chemical/chemical-engineering-bsche#programrequirementstext",
}
`;

exports[`Filters work https://catalog.northeastern.edu/undergraduate/engineering/mechanical-industrial/aerospace-minor#programrequirementstext 1`] = `
Object {
  "type": "Minor",
  "url": "https://catalog.northeastern.edu/undergraduate/engineering/mechanical-industrial/aerospace-minor#programrequirementstext",
}
`;

exports[`Filters work https://catalog.northeastern.edu/undergraduate/social-sciences-humanities/interdisciplinary/womens-gender-sexuality-studies-minor#programrequirementstext 1`] = `
Object {
  "type": "Minor",
  "url": "https://catalog.northeastern.edu/undergraduate/social-sciences-humanities/interdisciplinary/womens-gender-sexuality-studies-minor#programrequirementstext",
}
`;
